#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT(false, 0.1)
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_CONFIG_FILES(Makefile)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(sys/types)
AC_CHECK_HEADERS(getopt.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(pwd.h)
AC_CHECK_LIB(c, printf)
AC_OUTPUT
